--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^4.22.3",
+    "concurrently": "^7.3.0",
     "json-server": "^0.17.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.2",
@@ -23,7 +25,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "startClient": "react-scripts start",
+    "startDB": "json-server --watch contacts.json --port 3001",
+    "start": "concurrently \"yarn startClient\" \"yarn startDB\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-highlight-words": "^0.16.4",
     "prettier": "2.1.2",
     "pretty-quick": "3.1.0"
   }
