--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "electronic_phone_book",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://anastasiyamav.github.io/electronic_phone_book/",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "antd": "^4.22.3",
     "concurrently": "^7.3.0",
+    "gh-pages": "^4.0.0",
     "json-server": "^0.17.0",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
@@ -25,6 +27,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "startClient": "react-scripts start",
     "startDB": "json-server --watch contacts.json --port 3001",
     "start": "concurrently \"yarn startClient\" \"yarn startDB\"",
